Redis和MQ解耦合