@@ -27,12 +27,34 @@ public class OS {
         }
     }
 
-        public String runcommand(String command) throws IOException {
-            StringBuilder output = new StringBuilder();
-            String str;
-            while ((str=Runtime.getRuntime().exec(command).inputReader().readLine())!=null){
-                output.append(str);
+    public String runCommand(String command) throws IOException, InterruptedException {
+        StringBuilder output = new StringBuilder();
+
+        // 使用 ProcessBuilder 来启动进程
+        ProcessBuilder processBuilder = new ProcessBuilder(command.split(" "));
+        Process process = processBuilder.start();
+
+        // 读取进程的标准输出流
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                output.append(line).append(System.lineSeparator());
             }
-            return  output.toString();
         }
+
+        // 等待进程终止，并获取退出状态
+        int exitCode = process.waitFor();
+        if (exitCode != 0) {
+            // 可以选择处理非零退出状态
+            // 例如，读取错误输出流
+            try (BufferedReader errorReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
+                String errorLine;
+                while ((errorLine = errorReader.readLine()) != null) {
+                    output.append(errorLine).append(System.lineSeparator());
+                }
+            }
+        }
+
+        return output.toString();
+    }
 }
